# boosting

./: README.md  requirements.txt  setup.cfg
notebooks/: adaboost.ipynb
src/boosting/: adaboost.py
