[metadata]
name = boosting
description = Boosting 
author = Data Science In Action
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    boosting
install_requires =
    numpy>=1.21.3
    scikit-learn>=1.0
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.package_data]
slapping = py.typed
